# quickdrop

./: .gitignore  ARCHITECTURE_ONBOARDING.md  Cargo.toml  README.md  index.html  package.json
crates/quickdrop-core/: Cargo.toml
crates/quickdrop-core/src/: config.rs  db.rs  discovery.rs  error.rs  files.rs  history.rs  identity.rs  lib.rs  logging.rs  pairing.rs  spaces.rs  transport.rs
crates/quickdrop-core/src/os/: mod.rs  windows.rs
crates/quickdrop-core/src/transfer/: handshake.rs  hash.rs  manager.rs  mod.rs  protocol.rs  receiver.rs  sender.rs
crates/quickdrop-core/tests/: transfer_roundtrip.rs
crates/quickdrop-share/: Cargo.toml
crates/quickdrop-share/examples/: serve.rs
crates/quickdrop-share/src/: error.rs  html.rs  lib.rs  net.rs  qr.rs  server.rs  session.rs
crates/quickdrop-share/tests/: share_http.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: context_menu.rs  lib.rs
