[package]
name = "quickdrop"
version = "0.1.0"
description = "QuickDrop — fast, secure LAN file transfer."
authors = ["QuickDrop"]
edition = "2021"

[lib]
name = "quickdrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
# Tauri shell + plugins
tauri = { workspace = true, features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"

# Core library
quickdrop-core = { path = "../crates/quickdrop-core" }
quickdrop-share = { path = "../crates/quickdrop-share" }

# Shared utilities
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
rustls = { workspace = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

