[package]
name = "quickdrop-core"
version = "0.1.0"
edition = "2021"
description = "QuickDrop core: discovery, pairing, transfer engine, file handling."
license = "MIT OR Apache-2.0"

[lib]
name = "quickdrop_core"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }

uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
time = { workspace = true }

sled = { workspace = true }
directories = { workspace = true }

# Crypto / identity
ed25519-dalek = { workspace = true }
rand = { workspace = true }
keyring = { workspace = true }
blake3 = { workspace = true }

# Networking
mdns-sd = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rcgen = { workspace = true }
if-addrs = { workspace = true }
socket2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
